(+) Fixed scrollbars in contact list, iScroll doesn't play well with display: none; (+) Added css classes for connection icon fixes. (+) Changed image names of connection icons.
(-) C++ still has to be commited but there splash screen is not playing well, that shadow.qrc is not being nice :(

--- a/assets/css/shadow.css
+++ b/assets/css/shadow.css
@@ -910,10 +910,47 @@ width:auto;
 }
 
 .no-connection {
-	background: url('../icons/connect0_16.png');
+	background: url('../icons/connect_0.png');
 	height:16px;
 	width:26px;
 }
+
+.connection-1 {
+	background: url('../icons/connect_1.png');
+	height:16px;
+	width:26px;
+}
+
+.connection-2 {
+	background: url('../icons/connect_2.png');
+	height:16px;
+	width:26px;
+}
+
+.connection-3 {
+	background: url('../icons/connect_3.png');
+	height:16px;
+	width:26px;
+}
+
+.connection-4 {
+	background: url('../icons/connect_4.png');
+	height:16px;
+	width:26px;
+}
+
+.connection-5 {
+	background: url('../icons/connect_5.png');
+	height:16px;
+	width:26px;
+}
+
+.connection-6 {
+	background: url('../icons/connect_6.png');
+	height:16px;
+	width:26px;
+}
+
 .no-syncing {
 	background: url('../icons/synced.png');
 	height:16px;
